<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/costume_et"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/costume_et"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/costume_black_btn"
        android:text="@string/log_in"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_not_registerd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_an_user_register_below"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToSignUp"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/costume_black_btn"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>